syntax = "proto3";

package auth;

import "google/protobuf/timestamp.proto";
option go_package = "/authpb";

// Authentication service definition
service AuthenticationService {
  rpc SignIn (SignInRequest) returns (SignInResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

// Request and response message types
message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignInResponse {
  string access_token = 1;
  string refresh_token = 2;
  JWTClaims claims = 3;
  string error = 4;
  uint32  userId = 5;// Return error message if any
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  string phone_number = 6;
  google.protobuf.Timestamp date_of_birth = 7;
  string address = 8;
  uint32 role_id = 9;
}

message RegisterResponse {
  string error = 1; // Return error message if any
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string error = 2; // Return error message if any
}

message JWTClaims {
  string username = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 5;
  google.protobuf.Timestamp date_of_birth = 6;
  string address = 7;
  uint32 role_id = 8;
  bool is_active = 9;
}
